Sections 1 and 2 updated

--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -120,7 +120,7 @@ Several dataset available from the fishery were explored but not used in the fin
 
 ####Historical Commercial Catch-Per-Unit Effort
 
-Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas from Gunderson [-@gunderson_population_1977].  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  Unfortunately, the original data and the analysis methods used to create this CPUE series have been lost to time precluding a re-analysis of these data.  Due to the inability to examine the assumptions made during the original analysis or the data used this time-series has been excluded from the base model.  These data were included in the previous assessment but were deamed not influential in the model estimates.  Information regarding the fishery CPUE are available in Appendix \ref{appendix-c.-description-of-cpue-and-triennial-data}.
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas from Gunderson [-@gunderson_population_1977].  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  Unfortunately, the original data and the analysis methods used to create this CPUE series have been lost to time precluding a re-analysis of these data.  Due to the inability to examine the assumptions made during the original analysis or the data used this time-series has been excluded from the base model.  These data were included in the previous assessment but were deemed not influential in the model estimates.  Information regarding the fishery CPUE are available in Appendix \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 ####Oregon Special Projects Length and Age Data
 Oregon special project data were provided by ODFW.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data were collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.  This was the first time these data were explored for consideration in the assessment.
