--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -925,7 +925,7 @@ Limits on Pacific ocean perch were first established in 1983 (Table
 and cumulative landing limits. In 1999, Pacific ocean perch was declared
 overfished with the assessment estimating the spawning output below the
 management limit (25\% of virgin biomass or output). In reaction to the
-overfished decleration, harvest limits were reduced relative to previous
+overfished declaration, harvest limits were reduced relative to previous
 years and a rebuilding plan was implemented in 2001 with recent ACLs
 being set well below the estimated OFLs (Table
 \ref{tab:mnmgt_perform_tables}).
@@ -1217,7 +1217,7 @@ sampling of the population.
 
 Information regarding the Triennial shelf survey index of abundance and
 the number of samples available and plots of the composition data are
-available in Appendix
+available in Appendix C, section
 \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 \paragraph{Washington Research
@@ -1407,9 +1407,9 @@ this CPUE series have been lost to time precluding a re-analysis of
 these data. Due to the inability to examine the assumptions made during
 the original analysis or the data used this time-series has been
 excluded from the base model. These data were included in the previous
-assessment but were deamed not influential in the model estimates.
-Information regarding the fishery CPUE are available in Appendix
-\ref{appendix-c.-description-of-cpue-and-triennial-data}.
+assessment but were deemed not influential in the model estimates.
+Information regarding the fishery CPUE are available in Appendix C,
+section \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 \paragraph{Oregon Special Projects Length and Age
 Data}\label{oregon-special-projects-length-and-age-data}
@@ -1693,14 +1693,15 @@ West Coast groundfish was updated to the 2017 value (James Thorson,
 personal communication, NWFSC, NOAA)in preliminary models, with
 steepness fixed at an alternative value in the final base model. The
 estimated spawning output, relative stock status, and model diagnostics
-in preliminary models using the steepness prior were deamed unrealistic
-(e.g.~estimated near unfished conditions). Steepness was fixed in the
-base model at the value corresponding to the median spawning output
-bresulting from steepness values ranging from 0.25 - 0.95. Additionally,
-the prior for natural mortality was updated based on an analysis
-conducted by Owen Hamel (personal communication, NWFSC, NOAA), where
-female and male natural mortality were fixed at the median of the prior
-(0.054 yr\textsuperscript{-1}).
+in preliminary models using the steepness prior were deemed unrealistic
+(e.g.~estimated near unfished conditions with low catchability by the
+NWFSC shelf-slope survey). Steepness was fixed in the base model at the
+value corresponding to the median spawning output resulting from
+steepness values ranging from 0.25 - 0.95. Additionally, the prior for
+natural mortality was updated based on an analysis conducted by Owen
+Hamel (personal communication, NWFSC, NOAA), where female and male
+natural mortality were fixed at the median of the prior (0.054
+yr\textsuperscript{-1}).
 
 \subsubsection{Summary of Fleets and
 Areas}\label{summary-of-fleets-and-areas}
@@ -1731,7 +1732,7 @@ fleet.
 The specifications of the assessment are listed in Table
 \ref{tab:Model_setup}. The model is a two-sex, age-structured model
 starting in 1918 with an accumulated age group at 60 years. Growth and
-natural mortality were assumed time invarient with a constant growth
+natural mortality were assumed time invariant with a constant growth
 estimated and natural mortality fixed at the median of the prior. The
 lengths in the population were tracked by 1 cm intervals and the length
 data were binned into 1 cm intervals. A curvilinear ageing imprecision
@@ -1775,14 +1776,14 @@ Time blocks for the fishery fleet are provided in Table
 \ref{tab:Model_setup}. Fishery selectivity and retention has changed
 over the modeled period due to management changes. The time block for
 fishery selectivity was set from 1918-1999 and 2000-2017 based on
-changes in selectivity arising from the overfished deceleration. The
-time blocks on the retention curves for the fishery were set from
-1918-1991, 1992-2001, 2002-2007, 2008, 2009-2010, 2011-2016 based on
-available discarding data and changes in trip limits that likely
-resulted in changes to discarding patterns of Pacific ocean perch. No
-discarding was assumed in the at-sea hake and the foreign fisheries. The
-length data are not available from the foreign fleet. The selectivity
-from this fleet was mirrored to the main fishery fleet.
+changes in selectivity arising from the overfished declaration. The time
+blocks on the retention curves for the fishery were set from 1918-1991,
+1992-2001, 2002-2007, 2008, 2009-2010, 2011-2016 based on available
+discarding data and changes in trip limits that likely resulted in
+changes to discarding patterns of Pacific ocean perch. No discarding was
+assumed in the at-sea hake and the foreign fisheries. The length data
+are not available from the foreign fleet. The selectivity from this
+fleet was mirrored to the main fishery fleet.
 
 The following distributions were assumed for data fitting: survey
 indices were lognormal, total discards were lognormal, and multinomial
@@ -1816,16 +1817,21 @@ parameters based on an update of the Thorson-Dorn rockfish prior
 James Thorson (personal communication, NWFSC, NOAA) which was reviewed
 and endorsed by the Scientific and Statistical Committee (SSC) in 2017.
 The prior is a beta distribution with \(\mu\)=0.72 and \(\sigma\)=0.15.
-However, fixing steepness within the model resulted in what was
-determined to be an unrealistic relative depletion level, and it was
-recommended by the SSC to fix steepness at 0.50, determined by
-integrating across a range of steepness values (see Appendix XX for SSC
-subcommittee comments). The previous assessment estimated and fixed
-steepness equal to 0.40. The current data do not contain information
-regarding steepness. This change in perception is likely due to the
-observation of large recruitment events in this assessment, updated data
-weighting approaches, and varying model specificiatons between the 2011
-and the current model.
+However, fixing steepness within the model resulted in what was deemed
+to be an unrealistic relative depletion level (e.g.~near unfished
+conditions) with very low catchability by the NWFSC shelf-slope survey.
+The SSC recommended fixing steepness, determined by the expected
+(i.e.~arithmetic mean) spawning output value across a range of steepness
+values (see Appendix D, section
+\ref{appendix-d.-ssc-discussion-regarding-steepness} for SSC
+subcommittee comments). The steepness value of 0.50 that most closely
+corresponded with the expected spawning output was used in the final
+base model. The previous assessment estimated and fixed steepness equal
+to 0.40. The current data do not contain information regarding
+steepness. This change in perception is likely due to the observation of
+large recruitment events in this assessment, updated data weighting
+approaches, and varying model specifications between the 2011 and the
+current model.
 
 \subsubsection{Data Weighting}\label{data-weighting}
 
@@ -1856,7 +1862,7 @@ accounts for correlation in the data (i.e., the multinomial
 distribution) as opposed to the McAllister and Ianelli
 (\protect\hyperlink{ref-mcallister_bayesian_1997}{1997}) method
 (Harmonic Mean weighting) of looking at the difference between
-individual observations and predictions. A sensity was performed
+individual observations and predictions. A sensitivity was performed
 examining the difference between the weighting approaches. The weights
 applied to each length and age data set for the base model are shown in
 Table \ref{tab:francis}.
@@ -1974,11 +1980,12 @@ relative stock status for 2017 being estimated to \textgreater{} 100\%
 of unfished spawning output. The base model fixed steepness at 0.50,
 determined by calculating current ending spawning output biomass for
 steepness values ranging from 0.25 to 0.95 in increments of 0.05 and
-assuming each value to be equally plausible. The expected (aramethic
-mean) spawning output was identified and the most closely corresponding
-steepness of 0.50 was selected for use in the final base model. A model
-sensitivity is provided when steepness was fixed at the 2011 value of
-0.40 and at the median of the current prior of 0.72.
+assuming each value to be equally plausible. The expected (i.e
+arithmetic mean) spawning output was identified and the most closely
+corresponding steepness of 0.50 was selected for use in the final base
+model. Model sensitivities are provided when steepness was fixed at the
+2011 value of 0.40 or when fixed at the median of the current prior of
+0.72.
 
 \subsubsection{Convergence}\label{convergence}
 
@@ -2072,16 +2079,16 @@ used in this assessment were made during the panel.
 
 Recommendation: Further investigation of Pacific ocean perch stock
 structure is recommended. One approach would be to look for correlations
-of US west coast recruitment devaitions and survey biomass estimates
-with corresponding results from Pacific ocean perch asssessments in
+of US west coast recruitment deviations and survey biomass estimates
+with corresponding results from Pacific ocean perch assessments in
 Canada and Gulf of Alaska.
 
 \emph{STAT response: We agree. A preliminary analysis using a subset of
 Canadian data was provided as a sensitivity, but further investigations
 should be conducted.}
 
-Recommendation: The next iteration of this assessment could be an update
-assessment.
+STAR Recommendation: The next iteration of this assessment could be an
+update assessment.
 
 SSC Recommendation: Given the considerable uncertainty associated with
 the assessment, the GFSC recommends that the next assessment be a full
@@ -2161,7 +2168,7 @@ estimated selectivities for all fleets within the model are shown in
 Figure \ref{fig:selex}. The fishery selectivity was estimated to be dome
 shaped, reaching maximum selectivity for fish between 35 and 40 cm. An
 shift in selectivity for the final asymptotic selectivity was estimated
-for the fishery for prior to the overfished decleration and post
+for the fishery for prior to the overfished declaration and post
 (1918-1999 and 2000-2016). The at-sea hake fishery was estimated to have
 little selectivity for smaller Pacific ocean perch reaching full
 selectivity at the largest sizes. The foreign fleet for which only catch
@@ -2340,7 +2347,8 @@ predicted spawning output from the base model generally showed a slight
 decline over the time-series until when the foreign fleet began. A
 short, but sharp decline occurred during the period of the foreign
 fishery in the late 1960s. The stock continued to decline minimally
-until 1989 (37\%) when a combination of strong recruitment and low
+until 1989 (37\%), at which point the stock size remained relatively
+flat, until 2000, when a combination of strong recruitment and low
 catches resulted in an increase in spawning output at the end of the
 time-series. The recent increase is even faster for total biomass
 (Figure \ref{fig:total_bio}) because not all fish from the 2008
@@ -2389,7 +2397,7 @@ Analyses}\label{uncertainty-and-sensitivity-analyses}
 
 A number of sensitivity analyses were conducted. Each of the
 sensitivities conducted were single explorations from the base model
-assumptions and data and were not performed in a cummalative fashion.
+assumptions and data and were not performed in a cumulative fashion.
 
 \begin{enumerate}
 
@@ -2407,7 +2415,7 @@ assumptions and data and were not performed in a cummalative fashion.
   
   \item Include Triennial shelf survey (1980-2004) and composition data.
   
-  \item Remove all other surveys and associatted length and age data, except for the Triennial shelf survey.  Fishery length and ages were retained.  
+  \item Remove all other surveys and associated length and age data, except for the Triennial shelf survey.  Fishery length and ages were retained.  
   
   \item Include the historical commercial CPUE index.
   
@@ -2437,7 +2445,7 @@ model estimated extended positive recruitments in the early period of
 the model in order to create an population age-structure that was
 consistent with the composition data resulting in an increase in biomass
 prior to the start of the foreign fishing fleet, indicating that
-potential model misspecification in the absense of the other survey
+potential model misspecification in the absence of the other survey
 data.
 
 Weighting the data according to the harmonic means resulted in a
@@ -2446,7 +2454,7 @@ the stock being estimated at 60\% of unfished spawning output.
 
 The sensitivity that removed the large 2008 year-class resulted in a
 large change in estimated stock status relative to the base model.
-Assuming a recruitment even staight from the stock recruitment curve
+Assuming a recruitment even straight from the stock recruitment curve
 resulted in an estimated stock status of 59\%.
 
 Including additional data from either Canada, Washington research
@@ -2475,7 +2483,7 @@ fixing the parameter at specific values and estimated the remaining
 parameters based on the fixed parameter value.
 
 For steepness, the negative log-likelihood was essentially flat between
-values of 0.30 - 0.80 (Figure \ref{fig:piner_h}). Likelihood components
+values of 0.40 - 0.80 (Figure \ref{fig:piner_h}). Likelihood components
 by data source show that the fishery length and age data support a low
 steepness value, but the NWFSC shelf-slope age data support a higher
 value for steepness. The surveys generally do not provide information
@@ -2497,9 +2505,9 @@ minimized at approximately log(\(R_0\)) of 9.4 (Figure
 opposition regarding values of \(R_0\) where the fishery length and age
 data indicated lower values of \(R_0\) while the survey ages from the
 Pacific ocean perch and the NWFSC shelf-slope surveys indicated a higher
-value. The survey indices were uniformative concerning \(R_0\), an issue
-that was explored and discussed in depth during the week of the STAR
-panel.
+value. The survey indices were uninformative concerning \(R_0\), an
+issue that was explored and discussed in depth during the week of the
+STAR panel.
 
 \subsubsection{Reference Points}\label{reference-points-1}
 
@@ -5087,8 +5095,11 @@ ocean perch. \label{fig:Tri_Age}}
 
 \newpage
 
-\section{Appendix D. List of Auxiliary Files
-Available}\label{appendix-d.-list-of-auxiliary-files-available}
+\section{Appendix D. SSC Discussion Regarding
+Steepness}\label{appendix-d.-ssc-discussion-regarding-steepness}
+
+\section{Appendix E. List of Auxiliary Files
+Available}\label{appendix-e.-list-of-auxiliary-files-available}
 
 The listed files are also available as auxiliary files to accompany the
 assessment document:
