--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -63,7 +63,7 @@ Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower 
 
 The Triennial shelf survey was not used in the final base model for a number of reasons.  First, there were concerns regarding the varying sampling and targeting of specific species by year across the time-series.  Secondly, the Triennial shelf survey targeted the shelf of the West Coast and would not be expected to sample well slope species such as `r spp`.  There were limited observations of `r spp` relative to other surveys (e.g. NWFSC shelf-slope survey) and the length and age distributions varied in such a manner that would indicate either poor sampling of `r spp` or inconsistent sampling of the population.  
 
-Information regarding the Triennial shelf survey index of abundance and the number of samples available and plots of the composition data are available in Appendix \ref{appendix-c.-description-of-cpue-and-triennial-data}.
+Information regarding the Triennial shelf survey index of abundance and the number of samples available and plots of the composition data are available in Appendix C, section \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 #### Washington Research Lengths
 Research length and ages were provided by WDFW.  However, the information regarding the nature of the research cruise and collection methods have been lost to time.  The data set includes lengths and ages that were collected between 1967-1972 and in 1979.  The distribution of lengths across years collected were consistent with primarily only larger `r spp`, 35-40 cm, being selected.  All age data were based upon surface reads which unfortunately are highly biased at relatively young ages for `r spp`.  Due to the lack of information regarding the collection of these data, they were not selected to be apart of the base model but a sensitivity was conducted which evaluated the impact of these data.
@@ -120,7 +120,7 @@ Several dataset available from the fishery were explored but not used in the fin
 
 ####Historical Commercial Catch-Per-Unit Effort
 
-Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas from Gunderson [-@gunderson_population_1977].  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  Unfortunately, the original data and the analysis methods used to create this CPUE series have been lost to time precluding a re-analysis of these data.  Due to the inability to examine the assumptions made during the original analysis or the data used this time-series has been excluded from the base model.  These data were included in the previous assessment but were deemed not influential in the model estimates.  Information regarding the fishery CPUE are available in Appendix \ref{appendix-c.-description-of-cpue-and-triennial-data}.
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas from Gunderson [-@gunderson_population_1977].  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  Unfortunately, the original data and the analysis methods used to create this CPUE series have been lost to time precluding a re-analysis of these data.  Due to the inability to examine the assumptions made during the original analysis or the data used this time-series has been excluded from the base model.  These data were included in the previous assessment but were deemed not influential in the model estimates.  Information regarding the fishery CPUE are available in Appendix C, section  \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 ####Oregon Special Projects Length and Age Data
 Oregon special project data were provided by ODFW.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data were collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.  This was the first time these data were explored for consideration in the assessment.
